# advent-of-code-2024

./: Makefile  README.md  pyproject.toml
data/processed/: day-01.csv
notebooks/: day-01.ipynb
src/advent_of_code_2024/: day-01.py
