[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Koen van Esterik", email = "koen@vanesterik.dev"},
]
dependencies = ["polars>=1.16.0", "jupyter>=1.1.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
